plugins {
    id 'java-library'
    id 'checkstyle'
    id 'maven-publish'
}

apply plugin: 'org.cadixdev.licenser'
apply from: '../gradle/checkstyle.gradle'
apply from: '../gradle/publish.gradle'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

license {
    header = project.rootProject.file('HEADER.txt')
}

dependencies {
    implementation "com.google.guava:guava:${guavaVersion}"
    implementation "io.netty:netty5-handler:${nettyVersion}"
    implementation "org.checkerframework:checker-qual:${checkerFrameworkVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}